--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea
 todo.txt
 elasticsearch_drf.zip
+content_sevimliplay.sql
 
 # Created by https://www.gitignore.io/api/macos,linux,django,python,pycharm
 
