--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ django-elasticsearch-dsl==8.0
 django-elasticsearch-dsl-drf==0.22.5
 
 psycopg2==2.9.9
+
+
+pytils==0.4.1
+django-stdimage==6.0.1
+django-colorfield==0.10.1
+django-imagekit==5.0.0
