--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 todo.txt
 elasticsearch_drf.zip
 content_sevimliplay.sql
+elasticsearch.zip
 
 # Created by https://www.gitignore.io/api/macos,linux,django,python,pycharm
 
